# AinaHack-Backend

./: .gitignore  README.md  create_db.py
backend/: activitats.db  dockerfile  pyproject.toml  requirements.txt
backend/api/endpoints/: recommendations.py
backend/app/: auth.py  chatbot.py  main.py  recommender.py  users.py
backend/app/models/: task.py
backend/db/: session.py
backend/models/: __item__.py  base.py  categoria.py  contenido.py  interaccion.py  item.py  lista.py  perfil.py  ubicacion.py  usuario.py
backend/tests/: test_recommender.py
